Created the Basic Html Structure

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/style.css">
-    <link href="/css/reset.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <title>Grid Wireframe Practice</title>
 </head>
+<header class="header">HEADER</header>
 <body>
-    
+    <aside>ASIDE</aside>
+    <div class="grid-container">
+        <div class="item1">COLUMN</div>
+        <div class="item2">COLUMN</div>
+        <div class="item3">COLUMN</div>
+    </div>
+    <aside>ASIDE</aside>
 </body>
+<footer>FOOTER</footer>
 </html>
