--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Grid Wireframe Practice</title>
 </head>
 <header class="header">HEADER</header>
-<body>
-    <aside>ASIDE</aside>
+<body class="body">
+    <aside id="top-aside">ASIDE</aside>
     <div class="grid-container">
         <div class="item1">COLUMN</div>
         <div class="item2">COLUMN</div>
         <div class="item3">COLUMN</div>
     </div>
-    <aside>ASIDE</aside>
+    <aside id="bottom-aside">ASIDE</aside>
 </body>
-<footer>FOOTER</footer>
+<footer class="foot">FOOTER</footer>
 </html>
