--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="/css/reset.css">
     <title>Grid Wireframe Practice</title>
 </head>
-<header class="header">HEADER</header>
+<header class="header"><h1>HEADER</h1></header>
 <body class="body">
-    <aside id="top-aside">ASIDE</aside>
+    <aside id="top-aside"><h1>ASIDE</h1></aside>
     <div class="grid-container">
-        <div class="item1">COLUMN</div>
-        <div class="item2">COLUMN</div>
-        <div class="item3">COLUMN</div>
+        <div class="item1"><h2>COLUMN</h2></div>
+        <div class="item2"><h2>COLUMN</h2></div>
+        <div class="item3"><h2>COLUMN</h2></div>
     </div>
-    <aside id="bottom-aside">ASIDE</aside>
+    <aside id="bottom-aside"><h1>ASIDE</h1></aside>
 </body>
-<footer class="foot">FOOTER</footer>
+<footer class="foot"><h1>FOOTER</h1></footer>
 </html>
