Rewrote the mobile layout to better accomadate a responsive design

--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" href="/css/reset.css">
     <title>Grid Wireframe Practice</title>
 </head>
-<header class="header"><h1>HEADER</h1></header>
 <body class="body">
-    <aside id="top-aside"><h1>ASIDE</h1></aside>
-    <div class="grid-container">
-        <div class="item1"><h2>COLUMN</h2></div>
-        <div class="item2"><h2>COLUMN</h2></div>
-        <div class="item3"><h2>COLUMN</h2></div>
-    </div>
-    <aside id="bottom-aside"><h1>ASIDE</h1></aside>
+    <header class="header">
+        <h1>HEADER</h1>
+    </header>
+        <aside id="top-aside">
+            <h1>ASIDE</h1>
+        </aside>
+        <div class="grid-container">
+            <div class="item1"><h2>COLUMN</h2></div>
+            <div class="item2"><h2>COLUMN</h2></div>
+            <div class="item3"><h2>COLUMN</h2></div>
+        </div>
+        <aside id="bottom-aside">
+            <h1>ASIDE</h1>
+        </aside>
+    <footer class="foot">
+        <h1>FOOTER</h1>
+    </footer>
 </body>
-<footer class="foot"><h1>FOOTER</h1></footer>
+
 </html>
