Completed Responsive CSS

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <header class="header">
         <h1>HEADER</h1>
     </header>
-        <aside id="top-aside">
+        <ASIDE id="top-aside">
             <h1>ASIDE</h1>
         </aside>
         <div class="grid-container">
+            <h1>ARTICLE</h1>
             <div class="item1"><h2>COLUMN</h2></div>
             <div class="item2"><h2>COLUMN</h2></div>
             <div class="item3"><h2>COLUMN</h2></div>
